# webreader

./: .gitignore  pyproject.toml
webreader/: analysis.py  app.py  prompts.py  reader.py  utils.py
