[tool.poetry]
name = "webreader"
version = "0.1.0"
description = ""
authors = ["Jasper Emhoff <jlegoal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.53.0"
anthropic = "^0.37.1"
playwright = "^1.48.0"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
